[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                     # error handling
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.3.0"                                       # helps manage buffers
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.31"
glob = "0.3.1"
ordered-float = "5.1.0"
resp = "1.0.3"                                        # RESP protocol
skiplist = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.32"                                  # error handling
tokio = { version = "1.43.1", features = ["full"] }   # async networking
