[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5.60", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.32"
glob = "0.3.3"
itoa = "1.0.18"
ordered-float = "5.1.0"
resp = "1.0.3"
sha2 = "0.10.9"
skiplist = "0.6.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
